# MultimodalCapabilityMCP

./: .gitignore  README.md  config.json.example  pyproject.toml  requirements.txt  run_server.bat  start_claude_with_gateway.bat
src/mcp_relay_image_analyzer/: __init__.py  config.py  server.py
tests/: test_ocr_performance.py  test_server.py
