[project]
name = "mcp-relay-image-analyzer"
version = "0.1.0"
description = "An MCP server to analyze images using local relay multimodal models."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp>=1.2.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]

[project.scripts]
mcp-relay-image-analyzer = "mcp_relay_image_analyzer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
